| Summary: | ASTERISK-29856: res_rtp_asterisk: Invalid comparison creates unreachable code | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-01-11 12:45:05.000-0600 | Date Closed: | 2022-01-19 08:46:51.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | 18.9.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | This code doesn't make any sense: https://github.com/asterisk/asterisk/blob/59fcd1e7e20de07ceece67e27d7db7260d465772/res/res_rtp_asterisk.c#L5760
This flag isn't set initially, and the code reads (if flag is set, set the flag). I think the if comparison is missing a not here. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-01-11 12:45:05.524-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-01-19 08:46:52.120-0600 Change 17888 merged by Friendly Automation: res_rtp_asterisk: Fix typo in flag test/set [https://gerrit.asterisk.org/c/asterisk/+/17888|https://gerrit.asterisk.org/c/asterisk/+/17888] By: Friendly Automation (friendly-automation) 2022-01-19 08:50:51.162-0600 Change 17861 merged by Friendly Automation: res_rtp_asterisk: Fix typo in flag test/set [https://gerrit.asterisk.org/c/asterisk/+/17861|https://gerrit.asterisk.org/c/asterisk/+/17861] By: Friendly Automation (friendly-automation) 2022-01-19 08:51:10.680-0600 Change 17889 merged by Friendly Automation: res_rtp_asterisk: Fix typo in flag test/set [https://gerrit.asterisk.org/c/asterisk/+/17889|https://gerrit.asterisk.org/c/asterisk/+/17889] By: Friendly Automation (friendly-automation) 2022-01-19 10:35:01.957-0600 Change 17890 merged by Joshua Colp: res_rtp_asterisk: Fix typo in flag test/set [https://gerrit.asterisk.org/c/asterisk/+/17890|https://gerrit.asterisk.org/c/asterisk/+/17890] | ||